package model;
public enum Direction {
    UP,
    DOWN
}
