package model;
public enum ElevatorState{
    IDLE,
    MOVING_UP,
    MOVING_DOWN,
    MAINTENANCE
}